# rust-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  api.http  docker-compose.yml  http-client.env.json
.github/workflows/: deploy.yaml
helm/chat-service/: Chart.yaml  values.yaml
helm/chat-service/templates/: _helpers.yaml  cluster-issuer.yaml  deployment.yaml  ingress.yaml  rbac.yaml  service-account.yaml  service.yaml
helm/chat-service/values-override/: client-a.yml
migration/src/: lib.rs  m20241216_081358_channel_participant_relationship.rs  m20241217_083459_messages.rs  m20241217_115248_channel_name_is_unique.rs  m20241217_115805_channel_name_index.rs  m20241219_124257_users_and_orgs.rs  m20241219_210908_fixes_organization_table.rs  m20241222_090954_api_key_management.rs  m20241222_093435_remove_daily.rs  m20241222_094252_corrects_timezone_type.rs  m20241224_092916_stripe_int_the_mix.rs  m20241224_142812_channel_belongs_to_org.rs  m20241224_225808_channel_name_to_plural.rs  m20241228_173102_better_api_key_lookups.rs  m20241229_072649_tiers.rs  m20241229_094545_si_for_stripe.rs  m20241229_102530_adds_back_tier_col.rs  m20241229_103359_adds_tier.rs
src/: main.rs
src/config/: app.rs  database.rs  mod.rs  redis.rs  stripe.rs
src/entities/: api_key_usage.rs  api_keys.rs  channel.rs  channel_participant.rs  channels.rs  messages.rs  mod.rs  organization_members.rs  organization_tiers.rs  organizations.rs  participant.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
src/handlers/: api_keys_handler.rs  channel.rs  channels.rs  health.rs  messages.rs  mod.rs  organization_accounts.rs  organizations.rs  participant.rs  participants.rs  socket.rs  sockets.rs  users.rs
src/middleware/: auth.rs  error.rs  extractors.rs  helpers.rs  mod.rs
src/middleware/api_key_authorizer/: authorizer.rs  mod.rs
src/middleware/authorization/: auth.rs  mod.rs  (+1 more)
src/router/: api.rs  mod.rs
src/state/: mod.rs
src/utils/: api_keys_helpers.rs  hashPassword.rs  mod.rs  response.rs  setup_logging.rs
terafform/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
(+13 files in other folders)
