[package]
name = "chat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42", features = ["full"] }
serde = "1.0.216"
dotenvy = "0.15"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
