[package]
name = "chat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.42", features = ["full"] }
serde = "1.0.216"
dotenvy = "0.15"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", ] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"] }
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
http = "1.2.0"
