[package]
name = "chat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws", "macros"] }
tokio = { version = "1.42", features = ["full"] }
serde = "1.0.216"
dotenvy = "0.15"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", ] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"] }
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
http = "1.2.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.10"
tower-http = { version = "0.6.2", features = ["auth","trace"] }
thiserror = "2.0"
log = "0.4.22"

async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
reqwest = { version = "0.12.9", features = ["json"] }
hex = "0.4.3"
sha2 = "0.10.8"
time = "0.3.37"
